@@ -1,5 +1,6 @@
 2020-07-28 Jan Kotanski <jan.kotanski@desy.de>
 	* add tests for Tango File image source
+	* add tests for Hidra image source
 	* improve warning message for a missing file name in TangoFileSource
 	* tagged as 2.43.9
 
